--- a/XFormDiscovery603B/XFormDiscovery603B/MainPage.xaml
+++ b/XFormDiscovery603B/XFormDiscovery603B/MainPage.xaml
@@ -15,7 +15,7 @@
                      Orientation="Vertical"
                      Spacing="15">
             <Label Text="Enter a Phoneword:" />
-            <Entry x:Name="phoneNumberText" Text="1-855-XAMARIN" />
+            <Entry x:Name="phoneNumberText" Text="13066958868" />
             <Button x:Name="translateButon" Text="Translate" Clicked="OnTranslate" />
             <Button x:Name="callButton" Text="Call" IsEnabled="false" Clicked="OnCall" />
         </StackLayout>
