--- a/XFormDiscovery603B/XFormDiscovery603B/MainPage.xaml
+++ b/XFormDiscovery603B/XFormDiscovery603B/MainPage.xaml
@@ -14,8 +14,10 @@
                      HorizontalOptions="FillAndExpand"
                      Orientation="Vertical"
                      Spacing="15">
-            <Label Text="Enter a Phoneword:" />
-            <Entry x:Name="phoneNumberText" Text="13066958868" />
+          <Label Text="输入电话号码:" />
+          
+            <!--
+            <Entry x:Name="phoneNumberText" Text="" />-->
             <Button x:Name="translateButon" Text="Translate" Clicked="OnTranslate" />
             <Button x:Name="callButton" Text="Call" IsEnabled="false" Clicked="OnCall" />
         </StackLayout>
