/// Xaml 与 TapGestureRecognizer Tapped="OnBoxViewTapped"             //见Charles_Petzold\Chapter08\MonkeyTap\MonkeyTap.sln

--- a/XFormDiscovery603B/XFormDiscovery603B/MainPage.xaml
+++ b/XFormDiscovery603B/XFormDiscovery603B/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+               xmlns:local="clr-namespace:XFormDiscovery603B;assembly=XFormDiscovery603B"
              x:Class="XFormDiscovery603B.MainPage">
   <!--<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />-->
  <ContentPage.Padding>
@@ -20,6 +21,28 @@
             <Entry x:Name="phoneNumberText" Text="" />-->
             <Button x:Name="translateButon" Text="Translate" Clicked="OnTranslate" />
             <Button x:Name="callButton" Text="Call" IsEnabled="false" Clicked="OnCall" />
+          <ScrollView>
+            <StackLayout Padding="6, 0">
+              <local:ColorView ColorName="Aqua" />
+              <local:ColorView ColorName="Black" />
+              <local:ColorView ColorName="Blue" />
+              <local:ColorView ColorName="Fuchsia" />
+              <local:ColorView ColorName="Gray" />
+              <local:ColorView ColorName="Green" />
+              <local:ColorView ColorName="Lime" />
+              <local:ColorView ColorName="Maroon" />
+              <local:ColorView ColorName="Navy" />
+              <local:ColorView ColorName="Olive" />
+              <local:ColorView ColorName="Purple" />
+              <local:ColorView ColorName="Pink" />
+              <local:ColorView ColorName="Red" />
+              <local:ColorView ColorName="Silver" />
+              <local:ColorView ColorName="Teal" />
+              <local:ColorView ColorName="White" />
+              <local:ColorView ColorName="Yellow" />
+            </StackLayout>
+          </ScrollView>
+
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
